# llm-compressor-evaluation

./: .gitignore  README.md
evaluation-commands/: pyproject.toml
evaluation-commands/coding/: all-evals.sh  live-code-bench.sh
evaluation-commands/environments/base/: pyproject.toml
evaluation-commands/environments/lighteval-eldar-fix-fork/: pyproject.toml
evaluation-commands/environments/lm-eval-base/: pyproject.toml
evaluation-commands/environments/lm-eval-mmlu-pro-fork/: pyproject.toml
evaluation-commands/environments/lm-eval-mrcr-fork/: pyproject.toml
evaluation-commands/environments/mmlu-pro-fork/: pyproject.toml
evaluation-commands/instruction/: all-evals.sh  gsm8k-platinum.sh  ifeval.sh  math-500.sh  mmlu-cot.sh  mmlu-pro.sh
evaluation-commands/long-context/: all-evals.sh  mrcr.sh
evaluation-commands/reasoning/: aime-25.sh  all-evals.sh  gpqa-diamond.sh  gsm8k-platinum.sh  ifeval.sh  math-500.sh  mmlu-pro.sh
images/dummy-shell-image/: Dockerfile  artifact-generator.sh
pipelines/: pyproject.toml
pipelines/dummy-artifact/: dummy_artifact.yaml  generator.py
pipelines/dummy-greeting/: dummy_greeting.yaml  generator.py
pipelines/dummy-shell/: dummy_shell.yaml  generator.py
pipelines/pvc-access-test/: generator.py  pvc-access-test.yaml
pipelines/simple-eval/: generator.py  simple_oneshot_gsm8k.yaml
pipelines/test-gpu-access/: generator.py  gpu_pipeline.yaml
playground/: basic_evaluation.py  tasks.txt
results-parser/: adapters.py  detector.py  parse.py  registry.py  scanner.py  test_parser.py
